[package]
name = "rustlet"
version = "0.0.1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rustlet"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.rustlet", "**/*.rustlet"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["rustlet"]

[dependencies]

librustlet = { path = "./rustlet" }
nioruntime_util = { git = "http://github.com/bitcoinmw/nioruntime", branch = "master" }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

