[package]
name = "rustlet"
version = "0.0.2-beta1"
authors = ["BitcoinMW Developers <bitcoinmw@protonmail.com>"]
description = "A runtime for use with BitcoinMW"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rustlet"
keywords = [ "crypto", "bitcoinmw", "runtime" ]
readme = "README.md"
exclude = ["**/*.rustlet", "**/*.rustlet"]
build = "src/build/build.rs"
edition = "2018"

[workspace]
members = ["rustlet"]

[dependencies]

ws2_32-sys = "0.2.1"
rand = "0.8.4"
clap = { version = "2.33", features = ["yaml"] }
byte-tools = "0.3.1"
byteorder = "1.4.2"
errno = "0.2.7"
libc = "^0.2.17"
rustls = "0.20.0-beta1"
rustls-pemfile = "0.2.0"
native-tls = "0.2.8"

librustlet = { path = "./rustlet" }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

