[package]
name = "librustlet"
version = "0.0.1"
authors = ["BMW Developers"]
description = "rustlet/rsp library"
license = "Apache-2.0"
repository = "https://github.com/bitcoinmw/rustlet"
keywords = [ "crypto", "nioruntime", "rustlet" ]
exclude = ["**/*.rustlet"]
edition = "2018"

[dependencies]

# master
nioruntime_util = { git = "http://github.com/bitcoinmw/nioruntime", branch = "master" }
nioruntime_http = { git = "http://github.com/bitcoinmw/nioruntime", branch = "master" }
nioruntime_log  = { git = "http://github.com/bitcoinmw/nioruntime", branch = "master" }
nioruntime_err  = { git = "http://github.com/bitcoinmw/nioruntime", branch = "master" }

# local testing
#nioruntime_util = { path = "../../nioruntime/util"  }
#nioruntime_http = { path = "../../nioruntime/http"  }
#nioruntime_log  = { path = "../../nioruntime/log"   }
#nioruntime_err =  { path = "../../nioruntime/error" }

lazy_static = "1.4.0"
querystring = "1.1.0"
rand = "0.8.4"
